--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ REALME :
 Realme 2 Pro | RMX1801
 Realme 3 Pro | RMX1851
 Realme 5 Pro | RMX1971
+Realme 6 Pro | RMX2061
 Realme XT | RMX1921
 Realme X7 Max 5G | RMX3031
 Realme GT Neo 2 | RMX3370
